aligning document list better, fixing how ABC documents are handled when saved, adding specific tests for doc to title and composer

--- a/parcel/src/main.css
+++ b/parcel/src/main.css
@@ -13,3 +13,7 @@ textarea.code {
 #status {
   padding-top: 6px;
 }
+
+.documentList {
+  padding-left: 30px;
+}
